tests/baselines/reference/decoratorOnClassMethod10.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts(4,6): error TS2345: Argument of type 'C' is not assignable to parameter of type 'Function'.
  Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts (1 errors) ====
    declare function dec(target: Function, paramIndex: number): void;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS2345: Argument of type '{|C|0|}' is not assignable to parameter of type '{|Function|1|}'.
!!! error TS2345:   Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.
!!! annotated symbol 0 tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts:3:7
!!! annotated symbol 1 /.ts/lib.es5.d.ts:272:11
    }